--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,15 @@ body,
     color: #1e2432;
     height: 100%;
     margin: 0;
+    transition: 0.2s all ease-in-out;
+    /* transform: transition; */
 }
 
 .main-container {
-    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)), url('./images/bg.jpg');
+    background: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)), url('https://i.ibb.co/R9hwSbx/bg.jpg');
     background-size: cover;
     background-position: center;
+    overflow-x: hidden;
 }
 
 .main-container {
@@ -23,15 +26,31 @@ body,
 }
 
 .search {
+    width: 20%;
     outline: none;
     padding: 20px 7%;
     border-radius: 20px;
     border: none;
     margin-bottom: 5%;
     background: rgba(250, 250, 250, 0.85);
+    font-size: 1.5rem;
+    text-align: center;
+}
+
+.search::placeholder {
+    font-family: inherit;
+    font-size: 1.5rem;
+    text-align: center;
+    transition: 0.2s ease;
+    transform: transition color;
+}
+
+.search:focus::placeholder {
+    color: transparent;
 }
 
 .city {
+    width: 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -84,11 +103,37 @@ p {
     align-items: center;
 }
 
-@media only screen and (max-width: 600px) {
+.message {
+    font-family: inherit;
+    display: flex;
+    text-align: center;
+    font-size: 2rem;
+}
+
+@media only screen and (max-width: 700px) {
     .search {
         padding: 20px 15%;
+        width: 50%;
     }
     .city {
         padding: 40px 20%;
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .search {
+        padding: 20px 15%;
+        width: 40%;
+        font-size: 1.3rem;
+    }
+
+    .search::placeholder {
+        font-size: 1rem;
+    }
+
+    .city {
+        padding: 40px 20%;
+        width: 40%;
     }
 }
